# sketchsort

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  NOTICE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: wheels.yml
bindings/python/: sketchsort_ext.cpp
golden/: sample.cos001.seed42.txt  sample_jaccard.jac005.seed42.txt  sample_minmax.mm03.seed42.txt
python/sketchsort/: __init__.py  cli.py
sample_code/: 01_basic.py  02_real_data.py  03_file_io.py  04_auto_mode.py  README.md
src/: Main.cpp  Makefile  SketchSort.cpp  SketchSort.hpp  main.cpp  multi_sort_engine.hpp  sketch_sort.cpp  sketch_sort.hpp  sketch_sort_jaccard.cpp  sketch_sort_jaccard.hpp  sketch_sort_minmax.cpp  sketch_sort_minmax.hpp
tests/: test_cli.py  test_cpp_cli.py  test_golden.py  test_search.py  test_search_jaccard.py  test_search_minmax.py
