[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.13",
]
build-backend = "scikit_build_core.build"

[project]
name = "sketchsort"
version = "0.3.1"
description = "Fast all-pairs similarity search via random projection sketches (cosine, min-max, and Jaccard metrics)"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Yasuo Tabei", email = "yasuo.tabei@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
]

[project.scripts]
sketchsort = "sketchsort.cli:main"

[tool.scikit-build]
wheel.packages = ["python/sketchsort"]
cmake.version = ">=3.20"
build-dir = "build/{wheel_tag}"

# sdist contents are determined by scikit-build-core. Since this tree is a
# git repository, it uses the git index (respecting .gitignore) to decide
# what to include; the explicit exclude list below is a belt-and-braces
# fallback on top of that.
sdist.exclude = [
  "/build",
  "/build_*",
  "/dist",
  "*.whl",
  "*.egg-info",
  "*.o",
  "*.so",
  ".pytest_cache",
  "__pycache__",
  ".svn",
  ".waf-*",
  ".lock-wscript",
  "src/build",
  "src/waf",
  "src/wscript",
  "src/sketchsort",
  "CLAUDE.md",
  ".DS_Store",
  "/tmp",
  "tmp/",
]
